# file-transfer-system

./: .gitignore  CRATESIO.md  Cargo.toml  LICENSE  README.md  Untitled Diagram.drawio
.github/workflows/: publish.yml
bridge_net/: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
core_lib/: Cargo.toml
core_lib/src/: client.rs  lib.rs  p2p.rs  server.rs  unified.rs
core_lib/src/server/: admin.rs  api.rs
fileflow/: README.md  index.html  package.json  vite.config.js
fileflow/src/: App.jsx  index.css
fileflow/src-tauri/: Cargo.toml  tauri.conf.json
fileflow/src-tauri/capabilities/: default.json
fileflow/src-tauri/src/: lib.rs  main.rs
fileflow/src/components/: Connection.jsx  Downloads.jsx  FilePicker.jsx  Item.jsx  Known.jsx  List.jsx  MainContent.jsx  Nav.jsx  NavItem.jsx  Path.jsx  ServerConnectForm.jsx  Settings.jsx  Table.jsx  Uploads.jsx
fts/: Cargo.toml  README.md
fts-unified/: README.md  package-lock.json  package.json  tailwind.config.js
fts-unified/src/: App.css  App.jsx  index.css  main.jsx
fts-unified/src-tauri/: Cargo.toml  tauri.conf.json
fts-unified/src-tauri/src/: lib.rs  main.rs
fts-unified/src/components/: MainContent.jsx  Nav.jsx  NavItem.jsx
fts/src/: client.rs  file_transfer.rs  graceful_shutdown.rs  lib.rs  network.rs  p2p.rs  server.rs  unified.rs
fts/src/server/: api.rs
fts/tests/: test_client.rs  test_network.rs  test_p2p.rs  test_server.rs  test_server_integration.rs
launcher/: Cargo.toml
launcher/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: client.rs  compression.rs  file_transfer.rs  lib.rs  main.rs  network.rs  p2p.rs  reciever.rs  sender.rs  server.rs
src/server/: common.rs  enterprise_server.rs  mod.rs  p2p_server.rs
tests/: test_network.rs  test_server_integration.rs
unified/: Cargo.toml
unified/src/: main.rs
