[package]
name = "file-transfer-system"
version = "0.2.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/Bicheka/file-transfer-system"
description = "File transfering, networking, and support for p2p"
keywords = ["p2p", "file", "tcp", "network"]
readme = "CRATESIO.md"
exclude = ["README"]
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
tokio = {version = "1.39.3", features = ["full"]}
serde = {version = "1.0.208", features = ["derive"]}
bincode = "1.3.3"
igd = "0.12.1"
local-ip-address = "0.6.1"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
anyhow = "1.0.87"
futures = "0.3.30"

[dev-dependencies]
tokio-test = "0.4.4"

[features]
graceful-shutdown = ["p2p"]
p2p = []

[package.metadata.docs.rs]
all-features = true
