[package]
name = "fts"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.39.3", features = ["full"]}
serde = {version = "1.0.208", features = ["derive"]}
bincode = "1.3.3"
igd = "0.12.1"
local-ip-address = "0.6.1"
reqwest = "0.12.7"
serde_json = "1"
anyhow = "1.0.87"

[dev-dependencies]
tokio = {version = "1.39.3", features = ["full"]}
tokio-test = "0.4.4"

[features]
full = ["server"]
server = []
