[package]
name = "fileflow"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.7", features = [] }

[dependencies]
tauri = { version = "2.0.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fts = { path = "../../fts", features = ["server"] }
tokio = { version = "1.39.3", features = ["full"] }
tauri-plugin-shell = "2.0.1"
anyhow = "1.0.87"
tauri-plugin-dialog = "2.0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
